--- a/www/index.html
+++ b/www/index.html
@@ -1,22 +1,32 @@
 <html>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+</head>
 <body>
 
-<div class='header'><h1>Home</h1></div>
-<div class='search-view'>
-<input class='search-key' type="text"/>
-<ul class='employee-list'></ul>
+<div class='container'>
+	<div class='header text-center'>
+		<h1>TicketSkipper</h1>
+		<span>Stealing tow truck business since 2014.</span>
+	</div>
+
+	<br/>
+	<br/>
+
+	<div class='search-view'>
+		<input class='search-key' type="text"/>
+		<ul class='employee-list'></ul>
+	</div>
+
+
+	<button onclick="app.showAlert(); return false;" class="btn btn-default">Check for Recent Snowfall</button>
 </div>
-
-
-<p><a href="#" onclick="app.showAlert(); return false;">Show Alert</a></p>
-<p><a href="#" onclick="app.playBeep(); return false;">Play Beep</a></p>
-<p><a href="#" onclick="app.vibrate(); return false;">Vibrate</a></p>
-
 
 <script src="phonegap.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
 <script src="js/storage/memory-store.js"></script>
 <script src="js/main.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 
 </body>
