--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,8 @@
 
 <script src="phonegap.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
-<script src="js/storage/memory-store.js"></script>
-<script src="js/main.js"></script>
+<script src="js/storage/websql-store2.js"></script>
+<script src="js/storage/main2.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
 
