--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<meta
+  name="viewport"
+  content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
-<body>
-
+<body onload="app.showData();">
+<title>TicketSkipper</title>
 <div class='container'>
 	<div class='header text-center'>
 		<h1>TicketSkipper</h1>
@@ -13,20 +16,41 @@
 	<br/>
 	<br/>
 
-	<div class='search-view'>
-		<input class='search-key' type="text"/>
-		<ul class='employee-list'></ul>
+
+	<div>
+		<span><b>Today is: </b></span>
+		<span class="dateTime"></span>
+
 	</div>
+	<br/>
 
-
-	<button onclick="app.showAlert(); return false;" class="btn btn-default">Check for Recent Snowfall</button>
+	<button onclick="app.checkSnow(); return false;" class="btn btn-warning">Check for Recent Snowfall (Using dummy date/data)</button>
 </div>
+
+<br/>
+
+Dummy Data:
+<div class="container">
+<table class="table striped-rows">
+	<thead>
+		<td><b>#</b></td>
+		<td><b>Time</b></td>
+		<td><b>Snowfall</b></td>
+	<thead>
+	<tbody class="snow-list">
+		
+	</tbody>
+</table>
+</div>
+
+
+
 
 <script src="phonegap.js"></script>
 <script src="lib/jquery-1.8.2.min.js"></script>
-<script src="js/storage/websql-store2.js"></script>
-<script src="js/storage/main2.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="lib/bootstrap.min.js"></script>
+<script src="js/storage/websql-store.js"></script>
+<script src="js/main.js"></script>
 
 
 </body>
