--- a/www/index.html
+++ b/www/index.html
@@ -24,18 +24,17 @@
 	</div>
 	<br/>
 
-	<button onclick="app.checkSnow(); return false;" class="btn btn-warning">Check for Recent Snowfall (Using dummy date/data)</button>
+	<button onclick="app.checkSnow(); return false;" class="btn btn-warning">Check for Recent Snowfall</button>
 </div>
 
 <br/>
 
-Dummy Data:
+Recent Snow Log
 <div class="container">
 <table class="table striped-rows">
 	<thead>
-		<td><b>#</b></td>
-		<td><b>Time</b></td>
-		<td><b>Snowfall</b></td>
+		<td><b>Date and Time</b></td>
+		<td><b>Snow Depth (in.)</b></td>
 	<thead>
 	<tbody class="snow-list">
 		
