--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 </head>
 <body onload="app.showData();">
+<?php 
+echo '<p> php placeholder </p>' 
+?> 
 <title>TicketSkipper</title>
 <div class='container'>
 	<div class='header text-center'>
