--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
   name="viewport"
   content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+   
 </head>
 <body onload="app.showData();">
 <title>TicketSkipper</title>
@@ -23,11 +24,15 @@
 
 	</div>
 	<br/>
+    
+    
+    <br/>
 
 	<button onclick="app.checkSnow(); return false;" class="btn btn-danger">Check on Your Car</button>
 </div>
 
 <br/>
+   <script type="text/javascript" src="http://voap.weather.com/weather/oap/USIL0389?template=EVNTV&par=3000000007&unit=0&key=twciweatherwidget"></script>
 
 <div class="container">
 	<h2>Recent Snow Log</h2>
