--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 	<br/>
 	<div class="row">
 		<button onclick="app.checkSnow(); return false;" class="btn btn-danger">Check on Your Car</button>
-
+		<button onclick="app.gogogo(); return false;" class="btn btn-danger">vibrate and beep</button>
 	</div>
 	<br/>
 	<div class="row">
