checkSnowChicago function added

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 	</div>
 	<br/>
 	<div class="row">
-		<button onclick="app.checkSnow(); return false;" class="btn btn-danger">Check on Your Car</button>
+		<button onclick="app.checkSnowChicago(); return false;" class="btn btn-danger">Check on Your Car</button>
 		<button onclick="app.gogogo(); return false;" class="btn btn-danger">vibrate and beep</button>
 	</div>
 	<br/>
